--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@ var table = new Tabulator("#example-table", {
         {title:"Profile", field:"url", formatter:"link", formatterParams:{urlField:"url"}}
     ],
     initialSort:[
-    {column:"badges", dir:"desc"}, //sort by this first
-    {column:"points", dir:"desc"}, //then sort by this second
+    {column:"points", dir:"desc"}, //sort by this first
+    {column:"badges", dir:"desc"}, //then sort by this second
     ]
 });
 </script>
