--- a/index.html
+++ b/index.html
@@ -72,3 +72,4 @@ layout: default
     });
 </script>
 <span>Updated:&nbsp;{%- include updated.txt -%}</span>
+<span><b>No longer maintained.</b> Go to <a href="https://toptrailblazers.com/c/TechBridgeWinter19/">https://toptrailblazers.com/c/TechBridgeWinter19/</a>
